--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,22 +1,20 @@
 - defaults:
-  link:
-    relink: true
+    link:
+      create: true
+      relink: true
+      force: true
 
 - clean: ['~']
 
 - link:
-  ~/.zshrc: dotfiles/zshrc.conf
-  ~/.tmux.conf: dotfiles/tmux.conf
-  ~/.Xresources: dotfiles/Xresources
-  ~/.i3blocks.conf: dotfiles/i3blocks.conf
-  ~/.config/:
-    glob: true
-    path: config/*
+    ~/.zshrc: dotfiles/zshrc
+    ~/.tmux.conf: dotfiles/tmux.conf
+    ~/.Xresources: dotfiles/Xresources
+    ~/.i3blocks.conf: dotfiles/i3blocks.conf
+    ~/.config/:
+      glob: true
+      path: dotfiles/config/*
 
 - shell:
-  - [git submodule update --init --recursive, Installing submodules]
+    - [git submodule update --init --recursive, Installing submodules]
 
-- defaults:
-  link:
-    create: true
-    relink: true
