--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -4,12 +4,10 @@ unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
 
-unbind [
-bind Escape copy-mode
-unbind p
-bind p paste-buffer
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+bind P paste-buffer
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection
+bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 
 # Proper terminal for 256 colors
 set -g default-terminal "screen-256color"
