--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -1,118 +1,127 @@
-# Keybindings
-# Remap Ctrl+b to Ctrl+a
-unbind C-b
-set -g prefix C-a
-bind C-a send-prefix
+# https://github.com/seebi/tmux-colors-solarized/blob/master/tmuxcolors-256.conf
+set-option -g status-bg colour235 #base02
+set-option -g status-fg colour136 #yellow
+set-option -g status-attr default
 
-bind P paste-buffer
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-selection
-bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
+# set window split
+bind-key v split-window -h
+bind-key b split-window
 
-# Proper terminal for 256 colors
-set -g default-terminal "screen-256color"
+# default window title colors
+set-window-option -g window-status-fg colour244 #base0
+set-window-option -g window-status-bg default
+#set-window-option -g window-status-attr dim
 
-# See http://stackoverflow.com/questions/21490249/when-scrolling-my-tmux-automatically-scroll-down
-# set -g status-right "%Y-%m-%d %H:%M:%S C:#{continuum_status}"
-set -g mouse on
-# 0 key is too far from `
+# active window title colors
+set-window-option -g window-status-current-fg colour166 #orange
+set-window-option -g window-status-current-bg default
+#set-window-option -g window-status-current-attr bright
+
+# pane border
+set-option -g pane-border-fg colour235 #base02
+set-option -g pane-active-border-fg colour240 #base01
+
+# message text
+set-option -g message-bg colour235 #base02
+set-option -g message-fg colour166 #orange
+
+# pane number display
+set-option -g display-panes-active-colour colour33 #blue
+set-option -g display-panes-colour colour166 #orange
+# clock
+set-window-option -g clock-mode-colour green #green
+
+
+set -g status-interval 1
+set -g status-justify centre # center align window list
+set -g status-left-length 20
+set -g status-right-length 140
+set -g status-left '#[fg=green]#H #[fg=black]• #[fg=green,bright]#(uname -r | cut -c 1-6)#[default]'
+set -g status-right '#[fg=green,bg=default,bright]#(tmux-mem-cpu-load) #[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d'
+
+# C-b is not acceptable -- Vim uses it
+set-option -g prefix C-a
+bind-key C-a last-window
+
+# Start numbering at 1
 set -g base-index 1
 
-# Disable automatic renaming of panes
-set -g allow-rename off
+# Allows for faster key repetition
+set -s escape-time 0
 
-# Smart pane switching with awareness of Vim splits.
-# See: https://github.com/christoomey/vim-tmux-navigator
+# Rather than constraining window size to the maximum size of any client 
+# connected to the *session*, constrain window size to the maximum size of any 
+# client connected to *that window*. Much more reasonable.
+setw -g aggressive-resize on
+
+# Allows us to use C-a a <command> to send commands to a TMUX session inside 
+# another TMUX session
+bind-key a send-prefix
+
+# Activity monitoring
+setw -g monitor-activity on
+set -g visual-activity on
+
+# hjkl pane traversal
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# Pane traversal with vim split awareness
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind -n M-Left if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
-bind -n M-Down if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
-bind -n M-Up if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
-bind -n M-Right if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
+bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n M-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
-# Use Alt-arrow keys without prefix key to switch panes
-#bind -n M-Left select-pane -L
-#bind -n M-Right select-pane -R
-#bind -n M-Up select-pane -U
-#bind -n M-Down select-pane -D
-
 # Shift arrow to switch windows
-bind -n S-Left  previous-window
+bind -n S-Left previous-window
 bind -n S-Right next-window
 
-# Move current window.
+# Move current window
 bind -n C-Left swap-window -t -1
 bind -n C-Right swap-window -t +1
 
-# No delay for escape key press
-set -sg escape-time 0
+bind-key C command-prompt -p "Name of new window: " "new-window -n '%%'"
 
-# Reload tmux config
-bind r source-file ~/.tmux.conf
+# reload config
+bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
-# clock
-setw -g clock-mode-colour yellow
-# --- end colors
+# auto window rename
+set-window-option -g automatic-rename
 
-# Restore vim
-set -g @resurrect-strategy-vim 'session'
-set -g @resurrect-strategy-nvim 'session'
-#set -g @resurrect-capture-pane-contents 'on'
+# color
+set -g default-terminal "screen-256color"
 
-# tmux-continuum settings
-set -g @continuum-boot 'on'
-set -g @continuum-restore 'on'
-set -g @continuum-save-interval '10'
+# https://github.com/edkolev/dots/blob/master/tmux.conf
+# Updates for tmux 1.9's current pane splitting paths.
 
-# Yank
-# set -g @shell_mode 'vind [
+# from powerline
+run-shell "tmux set-environment -g TMUX_VERSION_MAJOR $(tmux -V | cut -d' ' -f2 | cut -d'.' -f1 | sed 's/[^0-9]*//g')"
+run-shell "tmux set-environment -g TMUX_VERSION_MINOR $(tmux -V | cut -d' ' -f2 | cut -d'.' -f2 | sed 's/[^0-9]*//g')"
 
-###### VISUALS ######
-# --- colorrs (solarized dark)
-# default statusbar colors
-set -g status-bg black
-set -g status-fg yellow
-set -g status-attr default
+# Vi copypaste mode
+set-window-option -g mode-keys vi
+if-shell "test '\( #{$TMUX_VERSION_MAJOR} -eq 2 -a #{$TMUX_VERSION_MINOR} -ge 4 \)'" 'bind-key -Tcopy-mode-vi v send -X begin-selection; bind-key -Tcopy-mode-vi y send -X copy-selection-and-cancel'
+if-shell '\( #{$TMUX_VERSION_MAJOR} -eq 2 -a #{$TMUX_VERSION_MINOR} -lt 4\) -o #{$TMUX_VERSION_MAJOR} -le 1' 'bind-key -t vi-copy v begin-selection; bind-key -t vi-copy y copy-selection'
 
-# default window title colors
-setw -g window-status-fg brightblue
-setw -g window-status-bg default
+# status bar
+if-shell '\( #{$TMUX_VERSION_MAJOR} -eq 2 -a #{$TMUX_VERSION_MINOR} -lt 2\) -o #{$TMUX_VERSION_MAJOR} -le 1' 'set-option -g status-utf8 on'
 
-# active window title colors
-setw -g window-status-current-fg yellow
-setw -g window-status-current-bg default
-setw -g window-status-current-attr dim
+# rm mouse mode fail
+if-shell '\( #{$TMUX_VERSION_MAJOR} -eq 2 -a #{$TMUX_VERSION_MINOR} -ge 1\)' 'set -g mouse off'
+if-shell '\( #{$TMUX_VERSION_MAJOR} -eq 2 -a #{$TMUX_VERSION_MINOR} -lt 1\) -o #{$TMUX_VERSION_MAJOR} -le 1' 'set -g mode-mouse off'
 
-# pane border
-set -g pane-border-fg black
-set -g pane-border-bg default
-set -g pane-active-border-fg yellow
-set -g pane-active-border-bg default
+# fix pane_current_path on new window and splits
+if-shell "test '#{$TMUX_VERSION_MAJOR} -gt 1 -o \( #{$TMUX_VERSION_MAJOR} -eq 1 -a #{$TMUX_VERSION_MINOR} -ge 8 \)'" 'unbind c; bind c new-window -c "#{pane_current_path}"'
+if-shell "test '#{$TMUX_VERSION_MAJOR} -gt 1 -o \( #{$TMUX_VERSION_MAJOR} -eq 1 -a #{$TMUX_VERSION_MINOR} -ge 8 \)'" "unbind '\"'; bind '\"' split-window -v -c '#{pane_current_path}'"
+if-shell "test '#{$TMUX_VERSION_MAJOR} -gt 1 -o \( #{$TMUX_VERSION_MAJOR} -eq 1 -a #{$TMUX_VERSION_MINOR} -ge 8 \)'" 'unbind v; bind v split-window -h -c "#{pane_current_path}"'
+if-shell "test '#{$TMUX_VERSION_MAJOR} -gt 1 -o \( #{$TMUX_VERSION_MAJOR} -eq 1 -a #{$TMUX_VERSION_MINOR} -ge 8 \)'" 'unbind %; bind % split-window -h -c "#{pane_current_path}"'
 
-# command line/message text
-set -g message-bg black
-set -g message-fg yellow
-
-# pane number display
-set -g display-panes-active-colour yellow
-set -g display-panes-colour brightblue
-
-# List of plugins
-set -g @plugin 'tmux-plugins/tmux-open'
+# Plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-pain-control'
-set -g @plugin 'tmux-plugins/tmux-sessionist'
-set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin 'tmux-plugins/tmux-yank'
 
-setw -g mode-keys vi
-
-# Source airline snapshot
-if-shell "test -f ~/.config/tmux/airline-snapshot.conf" "source ~/.config/tmux/airline-snapshot.conf"
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
-
+run -b '~/.tmux/plugins/tpm/tpm'
