--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -4,8 +4,16 @@ set-option -g status-fg colour136 #yellow
 set-option -g status-attr default
 
 # set window split
-bind-key v split-window -h
-bind-key b split-window
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
+# bind-key v split-window -h
+# bind-key b split-window
+
+# Set xterm-keys so tmux passes certain keys through to the terminals
+set-window-option -g xterm-keys on
+# Set terminal overrides to deal with a PuTTy specific problem
+# See https://github.com/tmux/tmux/issues/708#issuecomment-285049433
+set -g terminal-overrides "xterm*:kLFT@:kRIT@:kLFT5=\eOD:kRIT5=\eOC:kUP5=\eOA:kDN5=\eOB:smkx@:rmkx@"
 
 # default window title colors
 set-window-option -g window-status-fg colour244 #base0
@@ -62,28 +70,31 @@ bind-key a send-prefix
 setw -g monitor-activity on
 set -g visual-activity on
 
-# hjkl pane traversal
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
-# Pane traversal with vim split awareness
+# Smart pane switching with awareness of Vim splits.
+# See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
-bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
-bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
-bind -n M-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
+bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
+bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
+bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
+bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+bind-key -T copy-mode-vi C-h select-pane -L
+bind-key -T copy-mode-vi C-j select-pane -D
+bind-key -T copy-mode-vi C-k select-pane -U
+bind-key -T copy-mode-vi C-l select-pane -R
+bind-key -T copy-mode-vi C-\ select-pane -l
+
+# Now remap clear screen, since the above C-l overwrites it
+bind C-l send-keys 'C-l'
 
 # Shift arrow to switch windows
-bind -n S-Left previous-window
-bind -n S-Right next-window
+bind -n C-Left previous-window
+bind -n C-Right next-window
 
 # Move current window
-bind -n C-Left swap-window -t -1
-bind -n C-Right swap-window -t +1
+bind -n S-Left swap-window -t -1
+bind -n S-Right swap-window -t +1
 
 bind-key C command-prompt -p "Name of new window: " "new-window -n '%%'"
 
@@ -94,7 +105,7 @@ bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 set-window-option -g automatic-rename
 
 # color
-set -g default-terminal "screen-256color"
+set -g default-terminal tmux-256color
 
 # https://github.com/edkolev/dots/blob/master/tmux.conf
 # Updates for tmux 1.9's current pane splitting paths.
@@ -112,7 +123,7 @@ if-shell '\( #{$TMUX_VERSION_MAJOR} -eq 2 -a #{$TMUX_VERSION_MINOR} -lt 4\) -o #
 if-shell '\( #{$TMUX_VERSION_MAJOR} -eq 2 -a #{$TMUX_VERSION_MINOR} -lt 2\) -o #{$TMUX_VERSION_MAJOR} -le 1' 'set-option -g status-utf8 on'
 
 # rm mouse mode fail
-if-shell '\( #{$TMUX_VERSION_MAJOR} -eq 2 -a #{$TMUX_VERSION_MINOR} -ge 1\)' 'set -g mouse off'
+if-shell '\( #{$TMUX_VERSION_MAJOR} -eq 2 -a #{$TMUX_VERSION_MINOR} -ge 1\)' 'set -g mouse on'
 if-shell '\( #{$TMUX_VERSION_MAJOR} -eq 2 -a #{$TMUX_VERSION_MINOR} -lt 1\) -o #{$TMUX_VERSION_MAJOR} -le 1' 'set -g mode-mouse off'
 
 # fix pane_current_path on new window and splits
